Fixed scrollbar - hid scrolbar and made it transparent - silly mistakes fixed

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 .card{
     width: 350px;
     height: 515px;
-    margin: 200px auto 0;
+    margin: 50px auto 0;
     background: linear-gradient(135deg var(--primary), var(--secondary));
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -249,10 +249,10 @@
     font-family: 'JetBrains Mono';
 }
 
-#loginpage .netlify-identity-signup{
+/* #loginpage .netlify-identity-signup{
     margin: 50px 50px;
 }
 
 #loginpage .netlify-identity-login{
     
-}
+} */
