--- a/stylemain.css
+++ b/stylemain.css
@@ -24,8 +24,23 @@ html{
     margin-top: -25px;
 }
 
+/*width*/
+::-webkit-scrollbar {
+    width:0px;
+}
+  
+  /*track*/
+::-webkit-scrollbar-track {
+    background:transparent;
+}
+  
+  /*thumb*/
+::-webkit-scrollbar-thumb {
+    background:transparent;
+}
+
 body{
-    background: var(--secondary);
+    background: var(--accent);
     font-family: 'JetBrains Mono';
 }
 
@@ -124,8 +139,12 @@ section{
     transition: 0.5s ease;
 }
 
-.blue{
+.accent{
     background: var(--accent);
+}
+
+.secondary{
+    background: var(--secondary);
 }
 
 .custom-shape-divider-bottom-1705135813 {
